Test singleton list input pathways